# pretty-please

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml
examples/: anthropic_example.py  litellm_example.py  openai_example.py
pretty_please/: __init__.py  cli.py  core.py  creature.py  stats.py
pretty_please/adapters/: __init__.py  anthropic.py  litellm.py  openai.py
pretty_please/adapters/claude_code/: __init__.py  hook.py  install.py
pretty_please/adapters/codex/: __init__.py  hook.py  install.py
tests/: test_adapters.py  test_cli.py  test_core.py  test_e2e_sdk.py  test_install.py  test_stats.py
