[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pretty-please-llm"
version = "0.1.1"
description = "🙏🏼 Politely injects PLEASE into your LLM prompts. Because manners matter (kind of)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "prompt", "anthropic", "openai", "politeness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# No required dependencies — adapters are optional
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.scripts]
pretty-please = "pretty_please.cli:main"

[project.urls]
Homepage = "https://github.com/msrdic/pretty-please"
Issues = "https://github.com/msrdic/pretty-please/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that call real APIs (require API keys)",
]

[tool.hatch.build.targets.wheel]
packages = ["pretty_please"]
